Make overlap prevention work

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,41 @@ body {
   font-size: 2vw;
 }
 
+.songtitle {
+
+}
+
 .verse {
-    line-height: 2.5em;
+    line-height: 2.5rem;
+    font-size: 0;
 }
 .chord {
-    display: inline-block;
+    display: inline flow-root;
     width: 0px;
     overflow: visible;
-    transform: translate(0, -1.1em);
+    transform: translate(0, -1.1rem);
     font-weight: bold;
+    font-family: monospace;
+}
+
+.box {
+    display: inline flow-root;
+    font-size: 2vw;
+    white-space: pre;
+    border: 1px solid;
+}
+
+.box[data-w="1"] {
+    min-width: 1rem;
+    background-color: pink;
+}
+
+.box[data-w="2"] {
+    min-width: 2rem;
+    background-color: lightgreen;
+}
+
+.box[data-w="3"] {
+    min-width: 3rem;
+    background-color: lightblue;
 }
